--- a/static/css/flight.css
+++ b/static/css/flight.css
@@ -8,7 +8,7 @@ body  {
     width: 60%;
     padding-left: 10px !important;
     padding-bottom: 10px !important;
-    padding-right: 10px !important; 
+    padding-right: 10px !important;
     padding-top: 0px !important;
 }
 
@@ -27,7 +27,16 @@ div.card-body {
 .custom-select {
     width: 100%
 }
-
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
 .btn2 {
     margin-left: 10%
 }
